# rust-harbor

./: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.js
.claude/: settings.local.json
design-system/rust-harbor/: MASTER.md
openspec/: spec.md
openspec/changes/ai-pull-history-summary/: design.md  proposal.md  tasks.md
openspec/changes/enhance-repo-view-and-metadata/: design.md  proposal.md  tasks.md
openspec/changes/improve-repo-list-performance-animations/: design.md  proposal.md  tasks.md
openspec/changes/init-rust-harbor/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/light-theme-ui-ux-refresh/: design.md  proposal.md  tasks.md
openspec/changes/light-theme-ui-ux-refresh/notes/: dark-mode-followup.md  ui-audit.md
openspec/changes/open-in-editor-ide/: design.md  proposal.md  tasks.md
openspec/changes/pull-diff-history/: design.md  proposal.md  tasks.md
openspec/changes/repo-tagging-and-grouping/: design.md  proposal.md  tasks.md
openspec/changes/repo-ui-ux-refresh/: design.md  proposal.md  tasks.md
openspec/changes/restructure-watched-folders-page/: design.md  proposal.md  tasks.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: mod.rs
src-tauri/src/controllers/: ai_summary.rs  mod.rs  pull_history.rs  repo.rs  settings.rs  tags.rs
src-tauri/src/error/: mod.rs
src-tauri/src/models/: editor.rs  mod.rs  pull_history.rs  repo.rs  workspace.rs
src-tauri/src/services/: ai.rs  database.rs  editor.rs  mod.rs  repo_service.rs  scanner.rs  watcher.rs
src/lib/components/custom/: GitMissingError.svelte  GroupHeader.svelte  OpenInEditor.svelte
src/lib/components/icons/: AppIcon.svelte  AppIconAnchor.svelte  AppIconH.svelte  AppIconShip.svelte  ProviderIcon.svelte
src/lib/components/pull-history/: AiSummaryPanel.svelte  CommitInfo.svelte  DatePickerPopover.svelte  DateRangeFilter.svelte  EmptyState.svelte  FileDiffViewer.svelte  FileList.svelte  HistoryFilters.svelte  ModelSelectDropdown.svelte  PullHistoryCard.svelte  RepoFilterDropdown.svelte  RepoPullHistory.svelte  (+1 more)
src/lib/config/: branding.ts
src/lib/stores/: pullHistoryStore.ts  tagStore.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/pull-history/: +page.svelte
src/routes/settings/: +page.svelte
(+32 files in other folders)
