[package]
name = "rust-harbor"
version = "0.1.0"
description = "Rust Harbor application for managing git repositories"
authors = ["Mai Viet"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rust_harbor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20.4"
notify = "8.2.0"
tauri-plugin-dialog = "2.6.0"
walkdir = "2.5.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.44"
rayon = "1.11.0"
dashmap = "6.1.0"
lazy_static = "1.5.0"
comrak = "0.36.0"

